[project]
name = "discordchat"
version = "0.1.0"
description = ""
authors = [
    {name = "wijez",email = "viet.info.43@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium (>=4.27.1,<5.0.0)",
    "tkinter-page (>=0.0.5,<0.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
